# ratatoskr

./: .gitignore  .review.md  .review.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  UI.md  biome.json  brokkr.toml  dev-seed.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
crates/action-types/: Cargo.toml
crates/action-types/src/: context.rs  lib.rs  log.rs  outcome.rs
crates/ai/: Cargo.toml
crates/ai/src/: formatting.rs  inference.rs  lib.rs  orchestration.rs  parsing.rs  prompts.rs  types.rs
crates/app/: Cargo.toml  generate-test-db.py
crates/app/src/: action_resolve.rs  action_wire.rs  admin_config.rs  app.rs  appearance.rs  command_dispatch.rs  command_resolver.rs  component.rs  db.rs  display.rs  draft_wal.rs  font.rs  helpers.rs  icon.rs  lib.rs  main.rs  main_view.rs  message.rs  notification_queue.rs  service_client.rs  service_subscription.rs  subscription.rs  update.rs  window_state.rs
crates/app/tests/: service_subprocess.rs
crates/attachment-cache/: Cargo.toml
crates/attachment-cache/src/: lib.rs
crates/body-store/: Cargo.toml
crates/calendar/: Cargo.toml
crates/calendar/src/: actions.rs  google.rs  graph.rs  jmap.rs  lib.rs  sync.rs  types.rs
crates/cloud-attachments/: Cargo.toml
crates/cloud-attachments/src/: lib.rs
crates/cmdk/: Cargo.toml
crates/cmdk/src/: args.rs  context.rs  descriptor.rs  id.rs  input.rs  keybinding.rs  lib.rs  registry.rs  resolver.rs  undo.rs
crates/command-palette/: Cargo.toml
crates/command-palette/src/: args.rs  context.rs  descriptor.rs  id.rs  keybinding.rs  lib.rs  registry.rs  resolver.rs  undo.rs
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  email_parsing.rs  encoding.rs  error.rs  folder_roles.rs  headers.rs  html_sanitizer.rs  http.rs  label_flags.rs  lib.rs  ops.rs  parsed_message.rs  signature_images.rs  signature_strip.rs  state.rs  test_endpoint.rs  text.rs  time.rs  token.rs  tracking_pixels.rs  typed_ids.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: attachment_cache.rs  auto_responses.rs  bimi.rs  chat.rs  cloud_attachments.rs  command_palette_queries.rs  constants.rs  contact_photos.rs  generation.rs  jmap_push.rs  lib.rs  mdn.rs  mentions.rs  oauth.rs  scheduled_send.rs  scope.rs  search_pipeline.rs  send.rs  send_identity.rs  sync_dispatch.rs  url_cleaning.rs
crates/coverage/: Cargo.toml
crates/coverage/src/: lib.rs  main.rs
crates/coverage/tests/: docs_smoke.rs
crates/crypto/: Cargo.toml
crates/crypto-key/: Cargo.toml
crates/crypto-key/src/: lib.rs
crates/db/: Cargo.toml
crates/db-read/: Cargo.toml
crates/db-read-lockdown/: Cargo.toml
crates/db-read-lockdown/tests/: lockdown.rs
crates/db-read/src/: blob_hash.rs  lib.rs  raw.rs
crates/db-read/tests/: blob_hash.rs  readonly.rs
crates/db/src/: blob_hash.rs  lib.rs  progress.rs
crates/dev-seed/: Cargo.toml
crates/dev-seed/src/: accounts.rs  calendars.rs  chats.rs  config.rs  contacts.rs  label_groups.rs  lib.rs  people.rs  pinned_searches.rs  templates.rs  threads.rs
crates/gmail/: Cargo.toml
crates/gmail/src/: api.rs  auth_parser.rs  client.rs  gdrive.rs  lib.rs  ops.rs  parse.rs
crates/graph/: Cargo.toml
crates/graph/src/: autodiscover.rs  calendar_sync.rs  category_sync.rs  client.rs  contact_sync.rs  folder_mapper.rs  group_sync.rs  label_sync.rs  lib.rs  mentions.rs  onedrive.rs  parse.rs  public_folder_sync.rs  shared_mailbox_sync.rs  sync.rs  types.rs  webhooks.rs
crates/iced-drop/: Cargo.toml
crates/iced-drop/src/: lib.rs
crates/imap/: Cargo.toml
crates/imap/src/: account_config.rs  connection.rs  convert.rs  folder_mapper.rs  imap_delta.rs  imap_delta_janitor.rs  imap_initial.rs  lib.rs  ops.rs  parse.rs  public_folders.rs  raw.rs  sync_pipeline.rs  types.rs  utf7_imap.rs
crates/import/: Cargo.toml
crates/import/src/: csv_parser.rs  detect.rs  lib.rs  mapping.rs  recipient_parser.rs  table.rs  types.rs  vcard_parser.rs  xlsx_parser.rs
crates/inline-image-store/: Cargo.toml
crates/inline-image-store/src/: lib.rs
crates/jmap/: Cargo.toml
crates/jmap/src/: calendar_sync.rs  client.rs  contacts_sync.rs  helpers.rs  lib.rs  mailbox_mapper.rs  ops.rs  parse.rs  push.rs  rfc822.rs  shared_mailbox_sync.rs  sieve.rs  signatures.rs  sync.rs
crates/label-colors/: Cargo.toml
crates/label-colors/src/: category_colors.rs  lib.rs  preset_colors.rs
crates/process-lifetime/: Cargo.toml
crates/process-lifetime/src/: lib.rs  linux.rs  windows.rs
iced-proto/: CLAUDE.md  Cargo.toml  TODO.md  seed-db.py
iced-proto/src/: appearance.rs  db.rs  display.rs  font.rs  icon.rs  main.rs  window_state.rs
iced-proto/src/ui/: contact_sidebar.rs  layout.rs  mod.rs  popover.rs  reading_pane.rs  right_sidebar.rs  settings.rs  sidebar.rs  theme.rs  thread_list.rs  widgets.rs
iced-proto/themes/: dark.toml  light.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: attachment_cache.rs  bimi.rs  category_colors.rs  cloud_attachments.rs  contact_photos.rs  label_colors.rs  lib.rs  mdn.rs  mentions.rs  oauth.rs  progress.rs  scheduled_send.rs  send_identity.rs  url_cleaning.rs
src-tauri/icons/: icon.icns
src-tauri/src/: account_commands.rs  ai_commands.rs  app_setup.rs  attachment_cache.rs  calendar_commands.rs  commands.rs  lib.rs  oauth.rs  progress.rs  state.rs  tray.rs  window.rs
src-tauri/src/account_commands/: info.rs  mod.rs  provider_init.rs  types.rs
src-tauri/src/body_store/: commands.rs  mod.rs
src-tauri/src/calendar_commands/: caldav.rs  commands.rs  google.rs  mod.rs  sync.rs
src-tauri/src/categorization/: commands.rs  mod.rs
src-tauri/src/command_palette/: commands.rs  mod.rs  resolver.rs
src-tauri/src/db/: migrations.rs  mod.rs  pending_ops.rs  queries.rs  queries_extra.rs  types.rs
src-tauri/src/discovery/: autoconfig.rs  commands.rs  jmap_wellknown.rs  merge.rs  mod.rs  mx.rs  probe.rs  registry.rs  types.rs
src-tauri/src/email_actions/: commands.rs  mod.rs
src-tauri/src/gmail/: mod.rs  (+7 more)
(+2032 files in other folders)
