[package]
name = "ratatoskr"
version = "0.1.0" # x-release-please-version
description = "Email at the speed of thought"
authors = ["folknor"]
license = "Apache-2.0"
repository = ""
edition = "2024"

[lints.clippy]
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"
let_underscore_must_use = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
too_many_arguments = "deny"
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
cognitive_complexity = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
unwrap_used = "deny"
too_many_lines = "deny"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt", "time"] }
futures = "0.3"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.11"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"] }
base64 = "0.22"
utf7-imap = "0.3"
socket2 = "0.6"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json", "form"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.25"
chrono = { version = "0.4", features = ["serde"] }
zstd = "0.13"
aes-gcm = "0.10"
getrandom = { version = "0.2", features = ["std"] }
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Shell"] }

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10.0", default-features = false, features = ["ksni"] }
