[package]
name = "llm"
description = "AI completion and orchestration for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rtsk = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
rusqlite.workspace = true
log = "0.4"
regex = "1"
async-trait = "0.1"
urlencoding = "2"
