[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "process", "rt-multi-thread", "macros", "sync", "time"] }
chrono.workspace = true
thiserror.workspace = true

# Crate-specific deps
#iced = { git = "https://github.com/squidowl/iced", rev = "b201e4f", default-features = false, features = [
#    "wgpu", "tokio", "lazy", "advanced", "canvas", "web-colors", "wayland", "x11", "image", "svg",
#] }
iced = { path = "/home/folk/Programs/sluggrs/repos/iced", default-features = false, features = [
    "wgpu", "tokio", "lazy", "advanced", "canvas", "web-colors", "wayland", "image", "svg",
] }
dirs = "6"
dissimilar.workspace = true
system-fonts = { path = "../system-fonts" }
cmdk = { path = "../cmdk" }
rtsk = { path = "../core" }
types = { path = "../types" }
smart-folder = { path = "../smart-folder" }
label-colors = { path = "../label-colors" }
iced-drop = { path = "../iced-drop" }
rte = { path = "../rte" }
import = { path = "../import" }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.23.1", features = ["v4"] }
toml = "1.0"
mundy = { version = "0.2.3", default-features = false, features = ["color-scheme", "tokio", "log"] }
display-info = "0.5"
rfd = "0.17"
store = { path = "../stores" }
service-api = { path = "../service-api" }
service = { path = "../service" }
process-lifetime = { path = "../process-lifetime" }
dashmap = "6"
mime_guess = "2"
sha2 = "0.11"
dev-seed = { path = "../dev-seed", optional = true }
hotpath = { workspace = true, optional = true }
dellingr = { version = "0.2.0", optional = true }
reqwest = { workspace = true, optional = true }

[target.'cfg(unix)']
dev-dependencies = {}

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
base64.workspace = true
tempfile = "3"

[features]
default = ["dev-seed"]
dev-seed = ["dep:dev-seed"]
test-helpers = ["dep:dellingr", "dep:reqwest", "service/test-helpers", "service-api/test-helpers"]
hotpath = [
    "dep:hotpath",
    "hotpath/hotpath",
    "system-fonts/hotpath",
    "cmdk/hotpath",
    "rtsk/hotpath",
    "types/hotpath",
    "smart-folder/hotpath",
    "label-colors/hotpath",
    "iced-drop/hotpath",
    "rte/hotpath",
    "import/hotpath",
    "store/hotpath",
    "dev-seed?/hotpath",
]
hotpath-alloc = [
    "hotpath",
    "hotpath/hotpath-alloc",
    "system-fonts/hotpath-alloc",

    "cmdk/hotpath-alloc",
    "rtsk/hotpath-alloc",
    "types/hotpath-alloc",
    "smart-folder/hotpath-alloc",
    "label-colors/hotpath-alloc",
    "iced-drop/hotpath-alloc",
    "rte/hotpath-alloc",
    "import/hotpath-alloc",
    "store/hotpath-alloc",
    "dev-seed?/hotpath-alloc",
]
