[package]
name = "ratatoskr-calendar"
description = "Calendar sync (Google Calendar + CalDAV) for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ratatoskr-core = { path = "../core" }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
quick-xml.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["time"] }
log = "0.4"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
