[package]
name = "cal"
description = "Calendar sync (Google Calendar + CalDAV) for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rtsk = { path = "../core" }
gmail = { path = "../gmail" }
graph = { path = "../graph" }
jmap = { path = "../jmap" }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
quick-xml.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["time"] }
log = "0.4"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
hotpath = { workspace = true, optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath", "rtsk/hotpath", "gmail/hotpath", "graph/hotpath", "jmap/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "rtsk/hotpath-alloc", "gmail/hotpath-alloc", "graph/hotpath-alloc", "jmap/hotpath-alloc"]
