[package]
name = "ratatoskr-cloud-attachments"
description = "Cloud storage link detection and upload management for Ratatoskr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ratatoskr-core = { path = "../core" }

serde.workspace = true
serde_json.workspace = true
base64.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
regex = "1"
