[package]
name = "cmdk"
description = "Command palette engine for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
nucleo-matcher = "0.3"
types = { path = "../types" }
hotpath = { workspace = true, optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath", "types/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "types/hotpath-alloc"]
