[package]
name = "common"
description = "Shared provider utilities for Ratatoskr email providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
base64.workspace = true
chrono.workspace = true
rusqlite.workspace = true

# Extracted workspace crates
db = { path = "../db" }
store = { path = "../stores" }
search = { path = "../search" }
seen = { path = "../seen" }
types = { path = "../types" }
crypto-key = { path = "../crypto-key" }
# Phase 6d-B: `service-state` dep removed. The sync-trait surface and
# `SyncProviderCtx` (the only types in `common` that referenced
# writer-half handles) relocated to the new `provider-sync` crate so
# `common` is now UI-safe at the dep-graph level.

# Crate-specific deps
tokio = { workspace = true, features = ["sync"] }
log = "0.4"
async-trait = "0.1"
unicode-segmentation = "1.12"
zeroize = "1"
regex = "1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
css-inline = { version = "0.20", default-features = false }
lol_html = "2.9.0"
ammonia = "4"
aes-gcm = "0.10"
getrandom = { version = "0.4.2", features = ["std"] }
hotpath = { workspace = true, optional = true }


[features]
hotpath = ["dep:hotpath", "hotpath/hotpath", "db/hotpath", "store/hotpath", "search/hotpath", "seen/hotpath", "types/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "db/hotpath-alloc", "store/hotpath-alloc", "search/hotpath-alloc", "seen/hotpath-alloc", "types/hotpath-alloc"]
