[package]
name = "ratatoskr-core"
description = "Framework-agnostic core logic for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "macros", "rt", "time"] }
rusqlite.workspace = true
chrono.workspace = true
reqwest.workspace = true
base64.workspace = true
quick-xml.workspace = true

# Extracted workspace crates
ratatoskr-db = { path = "../db" }
ratatoskr-stores = { path = "../stores" }
ratatoskr-command-palette = { path = "../command-palette" }
ratatoskr-search = { path = "../search" }
ratatoskr-smart-folder = { path = "../smart-folder" }
ratatoskr-label-colors = { path = "../label-colors" }
ratatoskr-seen-addresses = { path = "../seen-addresses" }
ratatoskr-provider-utils = { path = "../provider-utils" }
ratatoskr-smtp = { path = "../smtp" }
ratatoskr-sync = { path = "../sync" }
ratatoskr-gmail = { path = "../gmail" }
ratatoskr-jmap = { path = "../jmap" }
ratatoskr-graph = { path = "../graph" }
ratatoskr-imap = { path = "../imap" }

# Crate-specific deps
log = "0.4"
futures = "0.3"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.11"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"] }
utf7-imap = "0.3"
socket2 = "0.6"
tantivy = "0.25"
zstd = "0.13"
getrandom = { version = "0.2", features = ["std"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
jmap-client = { version = "0.4", default-features = false, features = ["async"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
async-trait = "0.1"
hickory-resolver = { version = "0.25", features = ["tokio"] }
sha2 = "0.10"
unicode-segmentation = "1.12"
regex = "1"
url = "2"
resvg = { version = "0.47", default-features = false }
css-inline = "0.14"
lol_html = "2"
ammonia = "4"
calcard = "0.3"
