[package]
name = "rtsk"
description = "Framework-agnostic core logic for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "macros", "rt", "time"] }
rusqlite.workspace = true
chrono.workspace = true
reqwest.workspace = true
base64.workspace = true
quick-xml.workspace = true

# Extracted workspace crates
db = { path = "../db" }
store = { path = "../stores" }
cmdk = { path = "../cmdk" }
search = { path = "../search" }
smart-folder = { path = "../smart-folder" }
label-colors = { path = "../label-colors" }
seen = { path = "../seen" }
common = { path = "../common" }
smtp = { path = "../smtp" }
sync = { path = "../sync" }
gmail = { path = "../gmail" }
jmap = { path = "../jmap" }
graph = { path = "../graph" }
imap = { path = "../imap" }

# Crate-specific deps
log = "0.4"
futures = "0.3"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.11"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"] }
utf7-imap = "0.3"
socket2 = "0.6"
tantivy = "0.25"
zstd = "0.13"
getrandom = { version = "0.2", features = ["std"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
jmap-client = { path = "/home/folk/Programs/jmap-client" }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
async-trait = "0.1"
hickory-resolver = { version = "0.25", features = ["tokio"] }
sha2 = "0.11"
unicode-segmentation = "1.12"
regex = "1"
url = "2"
resvg = { version = "0.47", default-features = false }
css-inline = "0.20"
lol_html = "2"
ammonia = "4"
calcard = "0.3"

[dev-dependencies]
tempfile = "3"
