[package]
name = "rtsk"
description = "Framework-agnostic core logic for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "macros", "rt", "time"] }
chrono.workspace = true
reqwest.workspace = true
base64.workspace = true
quick-xml.workspace = true

# Extracted workspace crates
db = { path = "../db" }
store = { path = "../stores" }
cmdk = { path = "../cmdk" }
search = { path = "../search" }
smart-folder = { path = "../smart-folder" }
label-colors = { path = "../label-colors" }
seen = { path = "../seen" }
common = { path = "../common" }
smtp = { path = "../smtp" }
sync = { path = "../sync" }
gmail = { path = "../gmail" }
jmap = { path = "../jmap" }
graph = { path = "../graph" }
imap = { path = "../imap" }

# Crate-specific deps
log = "0.4"
futures = "0.3"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.11"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"] }
socket2 = "0.6"
tantivy = { version = "0.26.0", default-features = false, features = ["mmap", "stemmer", "stopwords", "lz4-compression"] }
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
getrandom = { version = "0.2", features = ["std"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
jmap-client = { path = "/home/folk/Programs/jmap-client", default-features = false, features = ["tls-native", "websockets", "mail", "calendars", "contacts"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
async-trait = "0.1"
hickory-resolver = { version = "0.25", features = ["tokio"] }
sha2 = "0.11"
unicode-segmentation = "1.12"
regex = "1"
url = "2"
resvg = { version = "0.47", default-features = false }
lol_html = "2"
ammonia = "4"
calcard = "0.3"
hotpath = { workspace = true, optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath", "db/hotpath", "store/hotpath", "cmdk/hotpath", "search/hotpath", "smart-folder/hotpath", "label-colors/hotpath", "seen/hotpath", "common/hotpath", "smtp/hotpath", "sync/hotpath", "gmail/hotpath", "jmap/hotpath", "graph/hotpath", "imap/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "db/hotpath-alloc", "store/hotpath-alloc", "cmdk/hotpath-alloc", "search/hotpath-alloc", "smart-folder/hotpath-alloc", "label-colors/hotpath-alloc", "seen/hotpath-alloc", "common/hotpath-alloc", "smtp/hotpath-alloc", "sync/hotpath-alloc", "gmail/hotpath-alloc", "jmap/hotpath-alloc", "graph/hotpath-alloc", "imap/hotpath-alloc"]

[dev-dependencies]
tempfile = "3"
