[package]
name = "ratatoskr-crypto"
description = "AES-256-GCM encryption for Ratatoskr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
aes-gcm = "0.10"
getrandom = { version = "0.2", features = ["std"] }
log = "0.4"
