[package]
name = "db-read"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = "1"
chrono.workspace = true
chrono-tz = "0.10"
flate2 = "1"
hotpath = { workspace = true, optional = true }
log = "0.4"
lol_html = "2.9.0"
mail-parser = "0.11.3"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
thiserror.workspace = true
types = { path = "../types" }
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
