[package]
name = "db"
description = "Shared database types, state, and migrations for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
flate2 = "1"
label-colors = { path = "../label-colors" }
lol_html = "2"
mail-parser = "0.11"
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
hotpath = { workspace = true, optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
