[package]
name = "dev-seed"
description = "Ephemeral dev database seeder for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
db = { path = "../db" }
store = { path = "../stores" }

rusqlite.workspace = true
chrono.workspace = true
rand = "0.10.0"
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
toml = "1"
serde = { workspace = true }
log = "0.4"
hotpath = { workspace = true, optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath", "db/hotpath", "store/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "db/hotpath-alloc", "store/hotpath-alloc"]
