[package]
name = "gmail"
description = "Gmail API provider for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "time"] }
reqwest.workspace = true
chrono.workspace = true

# Extracted workspace crates
db = { path = "../db" }
store = { path = "../stores" }
search = { path = "../search" }
ratatoskr-seen-addresses = { path = "../seen-addresses" }
common = { path = "../provider-utils" }
sync = { path = "../sync" }

# Crate-specific deps
log = "0.4"
async-trait = "0.1"
rusqlite.workspace = true
sha2 = "0.10"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
